Fix text overflow bugs.

--- a/client/main/main.sass
+++ b/client/main/main.sass
@@ -28,29 +28,13 @@ header
       padding-left: 0
       padding-right: 0
 
-  #description
-    line-height: 1.5em
-  p
-    white-space: normal
+#description
+  line-height: 1.5em
   #description-inner
     margin: 0 auto
     max-width: 1050px
-
-
-#isfor
-  border-bottom: 3px dashed $color_grey-dark
-  padding: 7em 0
-  .isfor-img
-    margin-bottom: 3em
-  h4
-    margin-bottom: 0.4em
-  h5
-    text-transform: uppercase
-    margin-top: 0
-  #scissors
-    position: absolute
-    bottom: -5px
-    left: 20%
+    @media (max-width: 620px)
+      white-space: normal
 
 
 #permission
